--- a/FE_Q/guest.html
+++ b/FE_Q/guest.html
@@ -231,17 +231,77 @@
 
     <div class="content">
             <ul class="list">
-                <li class="item">
+                <li class="item1">
                     PHIM
                 </li> 
                 <li class="item">
-                    <a class="nav-link" href="">Đang chiếu</a>
+                    <a href="#playing" class="accordion-toggle" data-bs-toggle="collapse" data-bs-target="#playing" aria-expanded="false">Đang chiếu</a>
                 </li>  
                 <li class="item">
-                    <a class="nav-link" href="">Sắp chiếu</a>
+                    <a href="#coming" class="accordion-toggle" data-bs-toggle="collapse" data-bs-target="#coming" aria-expanded="false">Sắp chiếu</a>
                 </li>              
             </ul>
-            <div class="list1">
+            <div class="list1" id = "playing">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                        <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                    </div>
+                </div>
+            </div>
+            <div class="list1" id = "coming">
                 <div class="row">
                     <div class="col-md-3">
                         <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
