--- a/FE_Q/user.html
+++ b/FE_Q/user.html
@@ -364,19 +364,19 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="name">Name</label>
-                              <div class="form">
+                              <div class="form remove">
                                     <input type="text" required placeholder="Võ Lê Quyên">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <div class="form">
+                                <div class="form remove">
                                     <input type="text" required placeholder="volequyen11042005@gmail.com">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="date">Date of birth</label>
-                                <div class="form">
+                                <div class="form remove">
                                     <input type="text" required placeholder="01/06/2004">
                                 </div>
                             </div>
@@ -385,13 +385,13 @@
                             
                             <div class="form-group">
                                 <label for="phonnum">Phone number</label>
-                                <div class="form">
+                                <div class="form remove">
                                     <input type="text" required placeholder="0916513682">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="Password">Password</label>
-                                <div class="form">
+                                <div class="form remove">
                                     <input type="text" required placeholder="12345678">
                                 </div>
                             </div>
