bị bug chưa fix được

--- a/FE_Q/login.html
+++ b/FE_Q/login.html
@@ -146,11 +146,11 @@
                         <div class="account-wrapper">
                             <img src="assets/images/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
-                                <li class="list-group-item"><a href="#"><i class="fa-solid fa-id-badge account-icon"></i>
+                                <li class="list-group-item"><a href="account.html"><i class="fa-solid fa-id-badge account-icon"></i>
                                     Tài Khoản</a></li>
-                                <li class="list-group-item"><a href="#"><i class="fa-solid fa-list-ol account-icon"></i>
+                                <li class="list-group-item"><a href="account.html"><i class="fa-solid fa-list-ol account-icon"></i>
                                     Lịch Sử</a></li>
-                                <li class="list-group-item"><a href="#" class="js-logout"><i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
+                                <li class="list-group-item"><a href="" class="js-logout"><i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
                                     Đăng Xuất</a></li>
                             </ul>
                         </div>
