--- a/FE_Q/user.html
+++ b/FE_Q/user.html
@@ -8,7 +8,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/accountstyle.css">
+    <link rel="stylesheet" href="assets/css/userstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -393,8 +393,50 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <button class="update">Cập nhật</button>
+                                        <button class="update accordion-toggle " data-bs-toggle="modal" data-bs-target="#update" aria-expanded="false">Cập nhật</button>
                                     </div>
+                                    <div class="modal" id = "update">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content update-box">
+                                                <p>NHẬP THÔNG TIN CHỈNH SỬA</p>
+                                                <div class="row user-infor-box">
+                                                    <div class="col box-left">
+                                                        <div class="subform-group">
+                                                            <label for="name">Name</label>
+                                                        <div class="subform">
+                                                                <input type="text" required placeholder="Võ Lê Quyên">
+                                                            </div>
+                                                        </div>
+                                                        <div class="subform-group">
+                                                            <label for="email">Email</label>
+                                                            <div class="subform">
+                                                                <input type="text" required placeholder="volequyen11042005@gmail.com">
+                                                            </div>
+                                                        </div>
+                                                        
+                                                    </div>
+                                                    <div class="col box-right">
+                                                        <div class="subform-group">
+                                                            <label for="date">Date of birth</label>
+                                                            <div class="subform">
+                                                                <input type="text" required placeholder="01/06/2004">
+                                                            </div>
+                                                        </div>
+                                                        <div class="subform-group">
+                                                            <label for="Password">Password</label>
+                                                            <div class="subform">
+                                                                <input type="text" required placeholder="12345678">
+                                                            </div>
+                                                        </div>
+                                                        <div class="subform-group">
+                                                            <button class="updateBtn">Cập nhật</button>
+                                                        </div>                                                     
+                                                    </div>   
+                                                </div>
+                                            </div>                                            
+                                        </div>
+                                    </div>
+
                                 </div>   
                             </div>
                         </div>
