--- a/FE_Q/user.html
+++ b/FE_Q/user.html
@@ -22,7 +22,9 @@
                 </div>
                 <div class="col-md-2 buyticket-area">
                     <button type="button" class="buyticket-btn btn">
-                        <img src="assets/images/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
+                        <a href="buyticket.html">
+                            <img src="assets/images/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
+                        </a>    
                     </button>
                 </div>
                 <div class="col-md-4">
