thêm link đến trang khác

--- a/FE_Q/moviedetail.html
+++ b/FE_Q/moviedetail.html
@@ -296,11 +296,11 @@
                             </p>
                             <p>
                                 <span class="introduce">
-                                    <a href="">Phim mới</a>
+                                    <a href="playing.html">Phim mới</a>
                                     <strong>Exhuma: Quật mộ trùng ma</strong>
                                     &nbsp;dự kiến ra mắt tại các 
                                     <em>
-                                        <a href="">rạp chiếu phim</a>
+                                        <a href="guest.html">rạp chiếu phim</a>
                                     </em>
                                     toàn quốc từ 15.03.2024.
                                 </span>
@@ -617,7 +617,7 @@
                         <div class="col-md-7"></div>
                         <div class="col-md-4">
                             <button type="button" class="new-mv">
-                                <a href="" class="">Xem thêm
+                                <a href="playing.html" class="">Xem thêm
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" class="svg-inline--fa fa-angle-right ml-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" style="width: 15px; height:15px; "><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path></svg>
                                 </a>
                             </button>  
