thêm link vào các trang, thêm 2 trang html

--- a/FE_Q/user.html
+++ b/FE_Q/user.html
@@ -33,7 +33,7 @@
                             Phim
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="movie-status list-group">
-                                <li class="movie-sta-text-1 py-1"><a href="#">PHIM ĐANG CHIẾU</a></li>
+                                <li class="movie-sta-text-1 py-1"><a href="playing.html">PHIM ĐANG CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
                                         <div class="col-md-3">
@@ -41,33 +41,33 @@
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
                                         </div>
                                     </div>
                                 </div>
                                 
-                                <li class="movie-sta-text-2 py-1"><a href="#">PHIM SẮP CHIẾU</a></li>
+                                <li class="movie-sta-text-2 py-1"><a href="playing.html">PHIM SẮP CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
                                         <div class="col-md-3">
@@ -75,28 +75,28 @@
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
                                         </div>
                                         <div class="col-md-3">
                                             <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
                                             <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
                                         </div>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                             Góc Điện Ảnh
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Thể loại phim</a></li>
+                                <li><a href="movietype.html">Thể loại phim</a></li>
                                 <li><a href="#">Diễn viên</a></li>
                                 <li><a href="#">Đạo diễn</a></li>
                                 <li><a href="#">Bình luận phim</a></li>
