lấy được lịch sử giao dịch từ database

--- a/FE_Q/moviedetail.html
+++ b/FE_Q/moviedetail.html
@@ -184,11 +184,11 @@
                                 </a>
                             </div>
                             <div class="row mv">
-                                <div class="row">
+                                <div class="row mv-country">
                                     <div class="col-md-2 d">Quốc gia:</div>
                                     <div class="col-md-3 nation-item">Hàn Quốc</div>
                                 </div>
-                                <div class="row">
+                                <div class="row align-items-center">
                                     <div class="col-md-2 d">Thể loại:</div>
                                     <div class="col-md-3 type">
                                         <button type="button" class="btn">
@@ -210,22 +210,22 @@
                                     <div class="col-md-2 d">Diễn viên:</div>
                                     <div class="col-md-10 type">
                                         <ul class="list-actor">
-                                            <li class="list">
+                                            <li class="list-item">
                                                 <button type="button" class="btn">
                                                     <a href="" class="list-item">Choi Min Sik</a>
                                                 </button>    
                                             </li>
-                                            <li class="list">
+                                            <li class="list-item">
                                                 <button type="button" class="btn">
                                                     <a href="" class="list-item">Lee Do Hyun</a>
                                                 </button>
                                             </li>
-                                            <li class="list">
+                                            <li class="list-item">
                                                 <button type="button" class="btn">
                                                     <a href="" class="list-item">Kim Go Eun</a>
                                                 </button>
                                             </li>
-                                            <li class="list">
+                                            <li class="list-item">
                                                 <button type="button" class="btn">
                                                     <a href="" class="list-item">Yoo Hae Jin</a>
                                                 </button>
