--- a/FE_Q/playing.html
+++ b/FE_Q/playing.html
@@ -15,7 +15,7 @@
         <div class="container-fluid  p-4">
             <div class="row align-items-center">
                 <div class="col-md-2 px-5 py-1">
-                    <a href="" class = "navbar-brand">
+                    <a href="login.html" class = "navbar-brand">
                         <img src="assets/images/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
