--- a/FE_Q/actordetail.html
+++ b/FE_Q/actordetail.html
@@ -275,6 +275,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="story">
+                        <h1 class="text-right">Tiểu sử</h1>
+                        <p>Gia nhập giới giải trí khi đã ngoài 30, cơ hội để có thể đạt được thành công như các nam diễn viên có lợi thế về ngoại hình và tuổi tác của Ma Dong Seok quả thực rất ít ỏi. Có lẽ vì hiểu được vấn đề này, sau vai diễn phụ đầu tay trong phim điện ảnh Heaven’s Soldiers (2005), trừ hai năm đầu, thời gian về sau mỗi năm ngôi sao sinh năm 1971 đều tham gia trung bình từ ba bộ phim trở lên (bao gồm cả lĩnh vực điện ảnh và truyền hình).  Dù xuất hiện nhiều hay ít, dù bộ phim có nổi bật hay không thì sự chăm chỉ và cố gắng của Ma Dong Seok cũng đã giúp anh ghi dấu ấn mạnh với khán giả và dần tạo được vị trí riêng của mình.</p>
+                    </div>
                 </div>
                 <div class="col-md-4 right">
                     <div class="row ">
