--- a/FE_Q/movietype.html
+++ b/FE_Q/movietype.html
@@ -34,32 +34,41 @@
                                 <div class="movie-list py-1">
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                                            <button class="buy-ticket-btn btn">
+                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                                Exhuma: Quật mộ trùng ma
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                KungFu Panda 4
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                           
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button> 
+                                                Quý cô thừa kế 2
+                                        </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">
+                                                <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                                Dune 2
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -67,33 +76,41 @@
                                 <li class="movie-sta-text-2 py-1"><a href="playing.html">PHIM SẮP CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                                            <button class="buy-ticket-btn btn">
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                                Exhuma: Quật mộ trùng ma
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                KungFu Panda 4
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                          
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                Quý cô thừa kế 2
+                                            </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">
+                                                    <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                                                    <button class="buy-ticket-btn btn">
+                                                    <i class="ti-ticket"></i>
+                                                    Mua vé</button>
+                                                Dune 2
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -104,9 +121,9 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="movietype.html">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
-                                <li><a href="#">Đạo diễn</a></li>
-                                <li><a href="#">Bình luận phim</a></li>
+                                <li><a href="actor.html">Diễn viên</a></li>
+                                <li><a href="director.html">Đạo diễn</a></li>
+                                <li><a href="review.html">Bình luận phim</a></li>
                             </ul>
                         </li>
 
@@ -378,7 +395,13 @@
             </div>
         </div>
     </div>
-
+    <div class="line-default"></div>
+            <div class="container galaxy">
+                <h1 class="text">GALAXY CINEMA</h1>
+                <P>Bạn là một người mê phim, bạn thích khám phá bí mật phía sau hậu trường của các bom tấn, bạn thần tượng nhà làm phim nào đấy bởi tư duy vượt thời đại, phong cách quay phim đặc biệt và những câu chuyện đầy mới lạ, bạn ngưỡng mộ một ngôi sao bởi khả năng diễn xuất cực đỉnh… Thậm chí nếu bạn muốn tìm hiểu sâu hơn về điện ảnh, các trào lưu chủ nghĩa từng tạo tiếng vang trong lịch sử, sự ra đời của các thể loại và bản sắc riêng của từng nền điện ảnh đến từ các quốc gia khác nhau.</P>
+                <p>Chào mừng đến chuyên trang điện ảnh, nơi được xem như một thư viện với đầy đủ các thông tin về những bộ phim, đạo diễn, diễn viên dành cho người yêu phim. Tại đây bạn dễ dàng tìm hiểu được tiểu sử của vị đạo diễn yêu thích, có được thông tin bên lề của các bộ phim hay đang chiếu tại rạp. Ngoài ra nếu đam mê những tác phẩm kinh điển trong quá khứ, vẫn có những bài bình luận với hạng mục Phim Kinh Điển.</p>
+                <p>Đối với những ai có hứng thú tìm hiểu đời tư của các minh tinh hạng A, Galaxy Cinema cũng luôn cập nhật các tin tức nóng hổi từ họ. Bên cạnh đó còn bao gồm các bài phân tích mang tính chuyên môn, các chủ đề giúp nâng cao kiến thức điện ảnh cũng được giới thiệu qua loạt bài Ký Sự Điện Ảnh.</p>
+            </div>
 
     
     <div class="footer">
