--- a/FE_Q/directordetail.html
+++ b/FE_Q/directordetail.html
@@ -7,7 +7,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/actordetailstyle.css">
+    <link rel="stylesheet" href="assets/css/directordetailstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -122,7 +122,7 @@
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="movietype.html">Thể loại phim</a></li>
                                 <li><a href="actor.html">Diễn viên</a></li>
-                                <li><a href="actor.html">Đạo diễn</a></li>
+                                <li><a href="director.html">Đạo diễn</a></li>
                                 <li><a href="review.html">Bình luận phim</a></li>
                             </ul>
                         </li>
@@ -142,7 +142,6 @@
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="#">Rạp Đà Nẵng</a></li>
                             </ul>
-
                         </li>
                     </ul>
                 </div>
@@ -169,7 +168,7 @@
                 <div class="col-md-8 left">
                     <div class="row actor-infor">
                         <div class="col-md-4 poster">
-                            <img src="assets/images/actor/ma-dong-seok4_1599204363952.png" alt="">
+                            <img src="assets/images/director/james-wan-premiere-death-sentence-01.jpg" alt="">
                         </div>
                         <div class="col-md-8 infor">
                             <div class="row">
@@ -179,15 +178,15 @@
                                     </li>
                                     <li class="ot-item">/</li>
                                     <li class="ot-item">
-                                        <a href="actor.html">Diễn viên</a>
+                                        <a href="director.html">Đạo diễn</a>
                                     </li>
                                     <li class="ot-item">/</li>
-                                    <li class="name">Ma Dong Seok</li>
+                                    <li class="name">James Wan</li>
                                 </ul>
                             </div>
                             
-                            <div class="row actor-name">Ma Dong Seok</div>
-                            <div class="row actor-rating">
+                            <div class="row director-name">James Wan</div>
+                            <div class="row director-rating">
                                 <button type="button" class="like-btn">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="thumbs-up" class="svg-inline--fa fa-thumbs-up " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="display:inline-block; height:1em; width:10px ">
                                         <path fill="currentColor" d="M313.4 32.9c26 5.2 42.9 30.5 37.7 56.5l-2.3 11.4c-5.3 26.7-15.1 52.1-28.8 75.2H464c26.5 0 48 21.5 48 48c0 18.5-10.5 34.6-25.9 42.6C497 275.4 504 288.9 504 304c0 23.4-16.8 42.9-38.9 47.1c4.4 7.3 6.9 15.8 6.9 24.9c0 21.3-13.9 39.4-33.1 45.6c.7 3.3 1.1 6.8 1.1 10.4c0 26.5-21.5 48-48 48H294.5c-19 0-37.5-5.6-53.3-16.1l-38.5-25.7C176 420.4 160 390.4 160 358.3V320 272 247.1c0-29.2 13.3-56.7 36-75l7.4-5.9c26.5-21.2 44.6-51 51.2-84.2l2.3-11.4c5.2-26 30.5-42.9 56.5-37.7zM32 192H96c17.7 0 32 14.3 32 32V448c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V224c0-17.7 14.3-32 32-32z">
@@ -205,28 +204,28 @@
                                 </button>
                             </div>
                             <div class="row review">
-                                <p>Không cần được đóng chính, chỉ với những vai phụ mà nam diễn viên cơ bắp Ma Dong Soek cũng đủ sức chiếm được sự yêu mến của khán giả và trở thành một trong những ngôi sao quyền lực của làng giải trí Hàn.</p>
+                                <p>Khi Hollywood vẫn còn bị chỉ trích về nạn phân biệt chủng tộc, khi những tài năng da màu đều phải chật vật để tìm chỗ đứng, một người đàn ông đã chứng minh rằng chỉ cần có khả năng kiệt xuất thì dù ở đâu hay bất cứ vị trí nào, bạn cũng sẽ tỏa sáng. Anh ấy là James Wan.</p>
                             </div>   
                             <div class="row nation">
                                 <div class="col-md-2 d">Quốc tịch:</div>
-                                <div class="col-md-2"><p>Hàn Quốc</p></div>
+                                <div class="col-md-2"><p>Malaysia</p></div>
                             </div>                        
                         </div>
                     </div>
-                    <div class="actor-img">
+                    <div class="director-img">
                         <h1 class="text-right">Hình ảnh</h1>
                         <div class="row">
                           <div class="col-md-3 img">
-                            <img src="assets/images/actor/ma-dong-seok5_1599204450802.png" alt="">
+                            <img src="assets/images/director/james-wan-1_1640143202218.jpeg" alt="">
                           </div>
                           <div class="col-md-3 img">
-                            <img src="assets/images/actor/ma-dong-seok6_1599204825651.jpg" alt="">
+                            <img src="assets/images/director/james-wan-1_1640143206298.jpg" alt="">
                           </div>
                           <div class="col-md-3 img">
-                            <img src="assets/images/actor/ma-dong-seok7_1599204789702.jpg" alt="">
+                            <img src="assets/images/director/james-wan-2_1640143104851.jpg" alt="">
                           </div>
                           <div class="col-md-3 img">
-                            <img src="assets/images/actor/ma-dong-seok8_1599204758882.jpg" alt="">
+                            <img src="assets/images/director/james-wan-3_1640143119922.jpg" alt="">
                           </div>
                         </div>
                     </div>
@@ -237,12 +236,12 @@
                                 <div class="row item">
                                     <div class="col-md-4 mv-poster">
                                         <a href="moviedetail.html">
-                                             <img src="assets/images/movie/trum-com-ac-quy6_1558682370589.jpg" alt="">
+                                             <img src="assets/images/director/75ee82f4d66dc6458306b811aff66370a269cd9d_1599240814983.jpg" alt="">
                                         </a>                                       
                                     </div>
                                     <div class="col-md-8 mv-name">
                                         <a href="moviedetail.html">
-                                            <p>The Gangster, The cop, The Devil</p>
+                                            <p>Aquaman</p>
                                         </a>
                                         <p class="status">Đang cập nhật</p>
                                     </div>                                  
@@ -250,12 +249,12 @@
                                 <div class="row item">
                                     <div class="col-md-4 mv-poster">
                                         <a href="moviedetail.html">
-                                             <img src="assets/images/movie/450x300_1685674204080.jpg" alt="">
+                                             <img src="assets/images/director/malignant-james-wan-4_1634895384659.jpg" alt="">
                                         </a>                                       
                                     </div>
                                     <div class="col-md-8 mv-name">
                                         <a href="moviedetail.html">
-                                            <p>Round up: No way out</p>
+                                            <p>Malignant</p>
                                         </a>
                                         <p class="status">Đang cập nhật</p>
                                     </div>                                  
@@ -266,12 +265,12 @@
                                 <div class="row item">
                                     <div class="col-md-4 mv-poster">
                                         <a href="moviedetail.html">
-                                             <img src="assets/images/movie/roundup-750_1713513441808.jpg" alt="">
+                                             <img src="assets/images/director/aquaman-750_1703216431428.jpg" alt="">
                                         </a>                                       
                                     </div>
                                     <div class="col-md-8 mv-name">
                                         <a href="moviedetail.html">
-                                            <p>The Roundup: Punishment</p>
+                                            <p>Aquaman and The lost Kingdom</p>
                                         </a>
                                         <p class="status">Đang cập nhật</p>
                                     </div>                                  
@@ -279,7 +278,7 @@
                                 <div class="row item">
                                     <div class="col-md-4 mv-poster">
                                         <a href="moviedetail.html">
-                                             <img src="assets/images/movie/ma-dong-seok5_1599204402167.png" alt="">
+                                             <img src="assets/images/director/the-conjuring-2-banner-preview.jpg" alt="">
                                         </a>                                       
                                     </div>
                                     <div class="col-md-8 mv-name">
@@ -294,7 +293,7 @@
                     </div>
                     <div class="story">
                         <h1 class="text-right">Tiểu sử</h1>
-                        <p>Gia nhập giới giải trí khi đã ngoài 30, cơ hội để có thể đạt được thành công như các nam diễn viên có lợi thế về ngoại hình và tuổi tác của Ma Dong Seok quả thực rất ít ỏi. Có lẽ vì hiểu được vấn đề này, sau vai diễn phụ đầu tay trong phim điện ảnh Heaven’s Soldiers (2005), trừ hai năm đầu, thời gian về sau mỗi năm ngôi sao sinh năm 1971 đều tham gia trung bình từ ba bộ phim trở lên (bao gồm cả lĩnh vực điện ảnh và truyền hình).  Dù xuất hiện nhiều hay ít, dù bộ phim có nổi bật hay không thì sự chăm chỉ và cố gắng của Ma Dong Seok cũng đã giúp anh ghi dấu ấn mạnh với khán giả và dần tạo được vị trí riêng của mình.</p>
+                        <p>Một trong những cột mốc quan trọng nhất cuộc đời James là khi anh gặp được người bạn đồng chí hướng Leigh Whannell. Cùng nhau, họ cho ra đời phim Saw -  một dấu son chói lọi trong sự nghiệp của James. Năm 2004, Saw gây được tiếng vang trên toàn thế giới. Chẳng ai ngờ được một bộ phim chỉ được đầu tư vỏn vẹn 1,2 triệu $ lại thắng đến gần 104 triệu $. Câu chuyện về cuộc đào thoát vô vọng của các nạn nhân khỏi kẻ giết người máu lạnh đưa người xem đến vô vàn cung bậc cảm xúc khác nhau và khiến các fan dòng phim kinh dị phát cuồng. Từ thành công ban đầu này, Saw ngày càng phát triển và trở thành một trong những franchise kinh dị nổi tiếng nhất mọi thời. Hiện Saw đã có đến 7 phần, với một trong số đó ở định dạng 3D, trở thành thương hiệu phim kinh dị phổ biến toàn thế giới.</p>
                     </div>
                 </div>
                 <div class="col-md-4 right">
