--- a/FE_Q/guest.html
+++ b/FE_Q/guest.html
@@ -34,32 +34,41 @@
                                 <div class="movie-list py-1">
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                                            <button class="buy-ticket-btn btn">
+                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                                Exhuma: Quật mộ trùng ma
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                KungFu Panda 4
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                           
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button> 
+                                                Quý cô thừa kế 2
+                                        </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">
+                                                <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                                Dune 2
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -67,33 +76,41 @@
                                 <li class="movie-sta-text-2 py-1"><a href="playing.html">PHIM SẮP CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                                            <button class="buy-ticket-btn btn">
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                                                <button class="buy-ticket-btn btn">
                                                 <i class="ti-ticket"></i>
                                                 Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                                                Exhuma: Quật mộ trùng ma
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                            
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                KungFu Panda 4
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">                                          
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                                                <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                                                <button class="buy-ticket-btn btn">
+                                                <i class="ti-ticket"></i>
+                                                Mua vé</button>
+                                                Quý cô thừa kế 2
+                                            </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé</button>
-                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                                            <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">
+                                                    <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                                                    <button class="buy-ticket-btn btn">
+                                                    <i class="ti-ticket"></i>
+                                                    Mua vé</button>
+                                                Dune 2
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -104,9 +121,9 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="movietype.html">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
-                                <li><a href="#">Đạo diễn</a></li>
-                                <li><a href="#">Bình luận phim</a></li>
+                                <li><a href="actor.html">Diễn viên</a></li>
+                                <li><a href="director.html">Đạo diễn</a></li>
+                                <li><a href="review.html">Bình luận phim</a></li>
                             </ul>
                         </li>
 
@@ -303,61 +320,41 @@
             </div>
             <div class="list1" id = "coming">
                 <div class="row">
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                        <button class="buy-ticket-btn btn">
+                    <div class="col-md-3"> 
+                        <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                            <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
+                            <button class="buy-ticket-btn btn">
                             <i class="ti-ticket"></i>
                             Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
+                            Exhuma: Quật mộ trùng ma
+                        </a>
+                    </div>
+                    <div class="col-md-3">                                            
+                        <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                            <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
+                            <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button>
+                            KungFu Panda 4
+                        </a>
+                    </div>
+                    <div class="col-md-3">                                           
+                        <a href="moviedetail.html" class="text-dark-emphasis movie-name">
+                            <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
+                            <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé</button> 
+                            Quý cô thừa kế 2
+                    </a>
                     </div>
                     <div class="col-md-3">
-                        <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
+                        <a href="moviedetail.html" class="text-dark-emphasis movie-name py-1">
+                            <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
+                            <button class="buy-ticket-btn btn">
                             <i class="ti-ticket"></i>
                             Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie" >
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                        <button class="buy-ticket-btn btn">
-                            <i class="ti-ticket"></i>
-                            Mua vé</button>
-                        <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
+                            Dune 2
+                        </a>
                     </div>
                 </div>
             </div>
